- Fixed bug #27295 (memory leak inside sscanf()). (Ilia)
- Fixed bug #27293 (two crashes inside image2wbmp()). (Ilia)
- Fixed bug #27278 (*printf() functions treat arguments as if passed by
  reference). (Ilia)
- Fixed bug #26753 (zend_fetch_list_dtor_id() doesn't check NULL strings).
  (Jani, Markus dot Lidel at shadowconnect dot com)

16 Feb 2004, Version 4.3.5RC3
- Fixed zero bytes memory allocation when no extra ini files are found in the
  --with-config-file-scan-dir specified directory. (Eric Colinet, Derick)
- Fixed bug #27354 (Modulus operator crashes PHP). (Derick)
- Fixed bug #27235 (Interbase NUMERIC x.0 field returns empty string on 0).
  (Ard)
- Fixed bug #27196 (Missing content_length initialization in apache 2 sapis).
  (Ilia, pdoru at kappa dot ro)
- Fixed bug #27183 (userland stream wrapper segfaults on stream_write).
  (Moriyoshi)
- Fixed bug #27175 (tzset() is not being called by PHP on startup).
  (Ilia, sagawa at sohgoh dot net)
- Fixed bug #27172 (Possible floating point exception in gmp_powm()). (Ilia)
- Fixed bug #27171 (crash inside gmp_hamdist()). (Jani)
- Fixed bug #27157 (Compile Failure on Solaris 8). (Timm)
- Fixed bug #27149 (broken CLOB support in oci8 extension). (Antony)
- Fixed bug #27135 (Possible crash inside mb_strlen()). (Moriyoshi)
- Fixed bug #27104 (CLI/CGI SAPI module variable name conflict). (Marcus)
- Fixed bug #27026 (Added "cgi.nph" php.ini option to allow forcing of
  the 'Status: 200' header that is not normally needed). (Ilia)
- Fixed bug #26862 (ob_flush() followed by output_reset_rewrite_vars() may
  result in data loss). (Ilia, scottmacvicar at ntlworld dot com)
- Fixed bug #26758 (FastCGI exits immediately with status 255). (Ilia, 
  tcarter at noggin dot com dot au)
- Fixed bug #26653 (open_basedir incorrectly resolved on win32). (Ilia,
  scottmacvicar at ntlworld dot com)
- Fixed bug #26407 (Result set fetching broken around transactions). (Timm)